--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             </div>
             <div><input type="checkbox" id="puPatch" checked> <label for="puPatch">Teritorijos Dalis (Patch)</label>
             </div>
+            <div><input type="checkbox" id="puHeart" checked> <label for="puHeart">Širdelė (Papildoma Gyvybė)</label>
+            </div>
         </div>
         <div class="mode-buttons">
             <button class="mode-btn btn-restart" onclick="startCustomGame()">Pradėti Žaidimą</button>
@@ -45,8 +47,8 @@
     <div id="gameContainer">
         <h1 id="modeTitle">Paper.io</h1>
         <div class="scores">
-            <div class="score1">Žaidėjas 1 (WASD): <span id="s1">0</span>%</div>
-            <div class="score2">Žaidėjas 2 (Rodyklės): <span id="s2">0</span>%</div>
+            <div class="score1">Žaidėjas 1 (WASD): <span id="s1">0</span>% ❤️<span id="h1">0</span></div>
+            <div class="score2">Žaidėjas 2 (Rodyklės): <span id="s2">0</span>% ❤️<span id="h2">0</span></div>
         </div>
         <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
