--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="mode-buttons">
             <button class="mode-btn mode-classic" onclick="startGame('classic')">Classic Mode</button>
             <button class="mode-btn mode-crazy" onclick="startGame('crazy')">Crazy Mode (Power-ups)</button>
+            <button class="mode-btn mode-ai" onclick="startGame('ai')">Prieš AI (Tu - Rodyklės)</button>
             <button class="mode-btn mode-custom" onclick="openCustomMenu()">Custom Mode</button>
         </div>
     </div>
@@ -47,8 +48,10 @@
     <div id="gameContainer">
         <h1 id="modeTitle">Paper.io</h1>
         <div class="scores">
-            <div class="score1">Žaidėjas 1 (WASD): <span id="s1">0</span>% ❤️<span id="h1">0</span></div>
-            <div class="score2">Žaidėjas 2 (Rodyklės): <span id="s2">0</span>% ❤️<span id="h2">0</span></div>
+            <div class="score1"><span id="name1">Žaidėjas 1 (WASD):</span> <span id="s1">0</span>% ❤️<span
+                    id="h1">0</span></div>
+            <div class="score2"><span id="name2">Žaidėjas 2 (Rodyklės):</span> <span id="s2">0</span>% ❤️<span
+                    id="h2">0</span></div>
         </div>
         <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
