--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <div id="gameContainer">
         <h1 id="modeTitle">Paper.io</h1>
         <div class="scores">
-            <div class="score1"><span id="name1">Žaidėjas 1 (WASD):</span> <span id="s1">0</span>% ❤️<span
-                    id="h1">0</span></div>
-            <div class="score2"><span id="name2">Žaidėjas 2 (Rodyklės):</span> <span id="s2">0</span>% ❤️<span
-                    id="h2">0</span></div>
+            <div class="score1"><span id="name1">Žaidėjas 1 (WASD):</span> <span id="s1">0</span>% <span
+                    id="heartsWrap1">❤️<span id="h1">0</span></span></div>
+            <div class="score2"><span id="name2">Žaidėjas 2 (Rodyklės):</span> <span id="s2">0</span>% <span
+                    id="heartsWrap2">❤️<span id="h2">0</span></span></div>
         </div>
         <canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
